--- a/src/java/logging.properties
+++ b/src/java/logging.properties
@@ -52,3 +52,4 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 #
 #com.hellblazer.primeMover.transform.TestTransform.level=FINE
 #com.hellblazer.primeMover.runtime.Framework.level=FINE
+concurrentinc.level=FINEST
