checkpoint for complex workloads

--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,28 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
+      <version>1.6.4</version>
       <scope>compile</scope>
     </dependency>
 
+    <!--<dependency>-->
+    <!--<groupId>org.slf4j</groupId>-->
+    <!--<artifactId>slf4j-jdk14</artifactId>-->
+    <!--<version>1.6.4</version>-->
+    <!--<scope>runtime</scope>-->
+    <!--</dependency>-->
+    <!---->
+    <!--<dependency>-->
+    <!--<groupId>org.slf4j</groupId>-->
+    <!--<artifactId>jul-to-slf4j</artifactId>-->
+    <!--<version>1.6.4</version>-->
+    <!--<scope>compile</scope>-->
+    <!--</dependency>-->
+    <!---->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.1</version>
+      <version>1.6.4</version>
       <scope>compile</scope>
     </dependency>
 
@@ -61,6 +75,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>10.0.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
@@ -69,11 +89,11 @@
   </dependencies>
 
   <repositories>
-    <!--<repository>-->
-    <!--<id>3rdSpace-repo</id>-->
-    <!--<url>http://svn.tensegrity.hellblazer.com/3Space/trunk/maven-repository</url>-->
-    <!--<name>3rdSpace</name>-->
-    <!--</repository>-->
+    <repository>
+      <id>3rdSpace-repo</id>
+      <url>http://svn.tensegrity.hellblazer.com/3Space/trunk/maven-repository</url>
+      <name>3rdSpace</name>
+    </repository>
     <repository>
       <id>conjars</id>
       <url>http://conjars.org/repo/</url>
