--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -51,5 +51,5 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 ############################################################
 #
 #com.hellblazer.primeMover.transform.TestTransform.level=FINE
-#com.hellblazer.primeMover.runtime.Framework.level=FINE
-concurrentinc.level=DEBUG
+com.hellblazer.primeMover.runtime.Framework.level=FINE
+concurrentinc.level=FINE
